# Hungarian-Algorithm-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: hungarian.h
src/: hungarian.cpp  main.cpp
